Crash in [@ shutdownhang | mozilla::IdentityCredentialStorageService::WaitForInitialization | mozilla::IdentityCredentialStorageService::DeleteFromOriginAttributesPattern]
Categories
(Core :: DOM: Credential Management, defect)
Tracking
()
People
(Reporter: dmeehan, Assigned: bvandersloot)
References
(Blocks 2 open bugs)
Details
(Keywords: crash, regression, regressionwindow-wanted)
Crash Data
Attachments
(1 file)
Crash report: https://crash-stats.mozilla.org/report/index/6e20bd7e-537e-4e48-81bf-8f1240230321
MOZ_CRASH Reason: Shutdown hanging at step AppShutdownTeardown. Something is blocking the main-thread.
Top 10 frames of crashing thread:
0 ntdll.dll KiFastSystemCallRet
1 ntdll.dll NtWaitForKeyedEvent
2 ntdll.dll RtlSleepConditionVariableSRW
3 kernel32.dll SleepConditionVariableSRW
4 mozglue.dll mozilla::detail::ConditionVariableImpl::wait mozglue/misc/ConditionVariable_windows.cpp:50
5 xul.dll mozilla::OffTheBooksCondVar::Wait xpcom/threads/CondVar.h:58
5 xul.dll mozilla::Monitor::Wait xpcom/threads/Monitor.h:37
5 xul.dll mozilla::IdentityCredentialStorageService::WaitForInitialization toolkit/components/credentialmanagement/IdentityCredentialStorageService.cpp:198
6 xul.dll mozilla::IdentityCredentialStorageService::DeleteFromOriginAttributesPattern toolkit/components/credentialmanagement/IdentityCredentialStorageService.cpp:719
7 xul.dll NS_InvokeByIndex
So far 333 crashes all on windows
Reporter | ||
Updated•2 years ago
|
Reporter | ||
Comment 1•2 years ago
|
||
See Bug 1823655 also, not sure if this both should be tracked under the same bug
Reporter | ||
Comment 2•2 years ago
|
||
Added a needinfo on Bug 1823655
https://bugzilla.mozilla.org/show_bug.cgi?id=1823655#c1
Updated•2 years ago
|
Reporter | ||
Comment 3•2 years ago
|
||
Settings 111 to wontfix, as 112 RC builds next week.
Comment 4•2 years ago
|
||
marking as this disabled since the crashes should technically not occur in 112 with the landing of D174488 in Bug 1823655. The actual fix remains in 113 (D174212 in Bug 1823655)
Comment 5•2 years ago
|
||
The severity field is not set for this bug.
:bvandersloot, could you have a look please?
For more information, please visit auto_nag documentation.
Comment 6•2 years ago
|
||
The bug is linked to a topcrash signature, which matches the following criterion:
- Top 20 desktop browser crashes on release
:bvandersloot, could you consider increasing the severity of this top-crash bug?
For more information, please visit auto_nag documentation.
Comment 7•2 years ago
|
||
We're still seeing crashes from Beta 113, i.e. https://crash-stats.mozilla.org/report/index/682a49af-6279-4090-8cba-d748b0230421
Comment 8•2 years ago
|
||
We landed the same disabling patch from bug 1823655 for 113 that landed back in comment 4 for 112. And if I understand correctly, we're hoping that bug 1825749 resolves these crashes for 114+. We can probably close this out next cycle if Beta114 is looking good.
Comment 9•2 years ago
|
||
Based on the topcrash criteria, the crash signature linked to this bug is not a topcrash signature anymore.
For more information, please visit BugBot documentation.
Comment 10•2 years ago
|
||
Bug 1825749 disables cleaning credential identity storage during shutdown if the feature is not enabled(The default setting). This will stop this crash, but we don't fix the root cause. So, the crash will happen again once we enable this feature. I suggest we keep this bug open for investigating and fixing the rool cause.
Updated•2 years ago
|
Assignee | ||
Comment 11•2 years ago
|
||
I don't have a windows machine to repro this on, however I have a likely root cause and will validate it in a Treeherder run.
This service has some logic to prevent initialization during shutdown. This prevents deadlocks like this where we wait for initialization. This was using ShutdownPhase::AppShutdown
. It looks like Windows is hitting this code in ShutdownPhase::AppShutdownTeardown
, which is before ShutdownPhase::AppShutdown
according to https://searchfox.org/mozilla-central/source/xpcom/base/ShutdownPhase.h.
The correct solution to fix that issue would be to use ShutdownPhase::AppShutdownConfirmed
as the first phase in which we don't spin up this service, rather than ShutdownPhase::AppShutdown
.
Assignee | ||
Comment 12•2 years ago
|
||
Updated•2 years ago
|
Comment 13•2 years ago
|
||
Comment 14•2 years ago
|
||
bugherder |
Comment 15•2 years ago
|
||
Since nightly and release are affected, beta will likely be affected too.
For more information, please visit BugBot documentation.
Comment 16•2 years ago
|
||
The patch landed in nightly and beta is affected.
:bvandersloot, is this bug important enough to require an uplift?
- If yes, please nominate the patch for beta approval.
- If no, please set
status-firefox114
towontfix
.
For more information, please visit BugBot documentation.
Assignee | ||
Updated•2 years ago
|
Description
•