Bug 1823657 - Include earlier stages of shutdown when preventing initialization during shutdown of IdentityCredentialStorageService, r=timhuang

Differential Revision: https://phabricator.services.mozilla.com/D178306